--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>HOLA</h1>
     <p>parrafo</p>
+    <form action="hola.php" method="POST">
+        <input type="text" name="name">
+        <input type="buttom" name="enviar">
+    </form>
 </body>
 </html>
